// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction Base Model Sign 1`] = `
Array [
  WitnessModel {
    "invocation": "40d5b43af06d224eaa838f2271f37579b7c1e264d56d1d9db2e986d897aec4bf2d2ea3516e0341c1bc504a367547a2950e48b8352de65458c16c1c10084b79d75d",
    "serializeWire": [Function],
    "verification": "21026ff03b949241ce1dadd43519e6960e0a85b41a69a05c328103aa2bce1594ca16ac",
  },
]
`;

exports[`Transaction Base Model Sign w/ Signature Function 1`] = `
Array [
  WitnessModel {
    "invocation": "4000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
    "serializeWire": [Function],
    "verification": "0100ac",
  },
]
`;
